# Hist_Data_Ingestor

./: .env.test  .gitignore  CLAUDE.md  Dockerfile  MVP_VERIFICATION_RESULTS.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PROJECT_ORGANIZATION.md  README.md  TESTING_QUICKSTART.md  create_project_structure.sh  docker-compose.test.yml  docker-compose.yml  ide-bmad-orchestrator.cfg.md  ide-bmad-orchestrator.md  main.py  pack_it_up.py  pyproject.toml  requirements.txt  run_calendar_tests.py  run_mvp_verification.py  setup.cfg  test_cli_production.py
.ai/: TODO-revert.md
.ai-docs/: AI_WORKFLOW_DIAGRAM.md  AI_WORKFLOW_QUICK_START_CHEATSHEET.md  AI_WORKFLOW_README.md  README.md
configs/: README.md  system_config.yaml
demos/: README.md
docs/: CLI_DEMONSTRATION_SCRIPT.md  CLI_REFACTORING_TEAM_SUMMARY.md  CROSSED_MARKETS_IMPLEMENTATION.md  CROSSED_MARKETS_QUICK_REFERENCE.md  DEFINITIONS_SCHEMA_SUCCESS.md  FIELD_STANDARDIZATION_MIGRATION.md  MVP_COMPLETION_SUMMARY.md  MVP_DEMONSTRATION_PLAN.md  OPERATIONAL_PROCEDURES_GUIDE.md  PANDAS_MARKET_CALENDARS_IMPLEMENTATION.md  PANDERA_DTYPE_COERCION_FIX.md  PRODUCTION_DEPLOYMENT.md  README.md  REFACTORING_LESSONS_LEARNED.md  TROUBLESHOOTING.md  USER_HANDOFF_GUIDE.md  architecture.md  contributing.md  faq.md  index.md  prd_epic_chunks.md  prd_shards.md  project-retrospective.md  schemas.md  setup.md  tech-stack.md  transformation-examples.md
hist_data_ingestor/: .env.example  README.md  requirements.txt  setup.cfg
scripts/: setup_test_environment.sh  validate_docs.py
specs/: README.md
src/: cli_commands.py  main.py
(+283 files in other folders)
