[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hist_data_ingestor"
version = "0.1.0"
description = "Historical Data Ingestor core framework"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["hist_data_ingestor/src"] 